compiler/typ/tests/fixtures/diagnostics/0052_core_annotated_value_mismatch_05.ml.infer.expected
File "0052_core_annotated_value_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0052_core_annotated_value_mismatch_05 is not a valid module name.

File "0052_core_annotated_value_mismatch_05.ml", line 1, characters 20-25:
1 | let epsilon : int = false
                        ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
